# arducar

./: .gitignore  CMakeLists.txt  README.md  builder.sh  main.cpp
arduino/: communicator.py  machinery.ino  radar.ino  radar_controller.ino  simulator.py  wheels.ino
car_computer/: CMakeLists.txt  main.cpp
car_computer/include/: arduino_communicator.hpp  communicators.hpp  control_center.hpp  hardware_processor.hpp  modules.hpp  movement_processor.hpp  runners.hpp
car_computer/source/: arduino_communicator.cpp  client_communicator.cpp  communicators.cpp  control_center.cpp  hardware_processor.cpp  main_loop.cpp  movement_processor.cpp  runners.cpp
connection_support/: support.cpp  support.hpp
frontend/frame/: frame.cpp  frame.hpp
map/: bitmap.hpp  env-shot.cpp  env-shot.hpp
map/image/: image-creator.cpp  image-creator.hpp  primitives.cpp  primitives.hpp
map/include/: map_analyzer.hpp
map/source/: bitmap.cpp  env-shot.cpp  map_analyzer.cpp
share/: constants.hpp
share/map/: bitmap.hpp  env-shot.hpp  map_analyzer.hpp
share/map/source/: bitmap.cpp  env-shot.cpp  map_analyzer.cpp
share/messages/: messages.cpp  messages.hpp
visual_client/: CMakeLists.txt  frame.hpp  main.cpp  visualizer.hpp
visual_client/frame/: frame.cpp  frame.hpp
visual_client/include/: communicator.hpp  data_processor.hpp  frame.hpp
visual_client/source/: communicator.cpp  data_processor.cpp  frame.cpp  visualizer.cpp
